# aws-lambda-haskell-runtime

./: .gitignore  .hlint.yaml  .tintin.yml  01-getting-started.html  02-adding-a-handler.html  03-configuring-the-dispatcher.html  04-usage-with-api-gateway.html  05-common-errors.html  06-deploying-a-lambda.html  ChangeLog.md  LICENSE  Makefile  README.md  aws-lambda-haskell-runtime.cabal  default.nix  hie.yaml  index.html  package.yaml  shell.nix  stack-template.hsfiles  stack.yaml  weeder.dhall
.circleci/: config.yaml  config.yml
.github/workflows/: ci.yml  publish.yml
app/: Main.hs
doc/: 01-getting-started.md  02-adding-a-handler.md  03-configuring-the-dispatcher.md  04-usage-with-api-gateway.md  05-common-errors.md  06-deploying-a-lambda.md  index.md
examples/wai-app/: .gitignore  ChangeLog.md  LICENSE  Lambda.Dockerfile  Makefile  README.md  package.yaml  stack.yaml  wai-app.cabal
examples/wai-app/app/: Main.hs
examples/wai-app/src/: Lib.hs
src/: Lib.hs
src/AWS/Lambda/: Client.hs  Context.hs  Env.hs  Error.hs  Function.hs  Runtime.hs
src/Aws/: Lambda.hs
src/Aws/Lambda/: API.hs  Configuration.hs  Events.hs  Function.hs  Runtime.hs  Setup.hs  TestNoTH.hs  ThHelpers.hs  Utilities.hs
src/Aws/Lambda/Events/: ApiGateway.hs
src/Aws/Lambda/Meta/: Common.hs  Discover.hs  Dispatch.hs  DispatchNoIPC.hs  Main.hs  Run.hs
src/Aws/Lambda/Runtime/: ApiGatewayInfo.hs  ApiInfo.hs  Common.hs  Configuration.hs  Context.hs  Environment.hs  Error.hs  IPC.hs  Publish.hs  Result.hs
src/Aws/Lambda/Runtime/ALB/: Types.hs
src/Aws/Lambda/Runtime/API/: Endpoints.hs  Version.hs
src/Aws/Lambda/Runtime/APIGateway/: Types.hs
src/Aws/Lambda/Runtime/StandaloneLambda/: Types.hs
test/: Spec.hs
