cabal-version:  2.2
name:           aws-lambda-haskell-runtime
version:        4.0.0
synopsis:       Haskell runtime for AWS Lambda
description:    Please see the README on GitHub at <https://github.com/theam/aws-lambda-haskell-runtime#readme>
category:       AWS
homepage:       https://github.com/theam/aws-lambda-haskell-runtime#readme
bug-reports:    https://github.com/theam/aws-lambda-haskell-runtime/issues
author:         Nikita Tchayka
maintainer:     hackers@theagilemonkeys.com
copyright:      2020 The Agile Monkeys SL
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/theam/aws-lambda-haskell-runtime

common common-options
  build-depends:       base >= 4.12 && < 4.14

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  default-language:    Haskell2010
  default-extensions:
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveAnyClass
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       QuasiQuotes
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeFamilies
                       TypeSynonymInstances
                       ViewPatterns

library
  import:              common-options
  exposed-modules:
      Aws.Lambda
      Aws.Lambda.Runtime
  other-modules:
      Aws.Lambda.Configuration
      Aws.Lambda.Meta.Common
      Aws.Lambda.Meta.Discover
      Aws.Lambda.Meta.Dispatch
      Aws.Lambda.Meta.Main
      Aws.Lambda.Meta.Run
      Aws.Lambda.Runtime.API.Endpoints
      Aws.Lambda.Runtime.API.Version
      Aws.Lambda.Runtime.ApiGatewayInfo
      Aws.Lambda.Runtime.ApiInfo
      Aws.Lambda.Runtime.Common
      Aws.Lambda.Runtime.Context
      Aws.Lambda.Runtime.Environment
      Aws.Lambda.Runtime.Error
      Aws.Lambda.Runtime.Publish
      Aws.Lambda.Utilities
      Paths_aws_lambda_haskell_runtime
  hs-source-dirs:
      src
  build-depends:
      aeson
    , bytestring
    , case-insensitive
    , http-client
    , http-types
    , path >0.7
    , path-io
    , safe-exceptions-checked
    , template-haskell
    , text
    , unordered-containers
  default-language: Haskell2010

test-suite aws-lambda-haskell-runtime-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_aws_lambda_haskell_runtime
  hs-source-dirs:
      test
  build-depends:
      hspec
  default-language: Haskell2010
