cabal-version: 3.0

name:           aws-lambda-haskell-runtime
version:        4.0.0
synopsis:       Haskell runtime for AWS Lambda
description:    Please see the README on GitHub at <https://github.com/theam/aws-lambda-haskell-runtime#readme>
category:       AWS
homepage:       https://github.com/theam/aws-lambda-haskell-runtime#readme
bug-reports:    https://github.com/theam/aws-lambda-haskell-runtime/issues
author:         Nikita Tchayka
maintainer:     hackers@theagilemonkeys.com
copyright:      2021 The Agile Monkeys SL
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/theam/aws-lambda-haskell-runtime

common common-options
  build-depends:
    base ^>= 4.7

  default-extensions:
    TemplateHaskell
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    DeriveGeneric
    TypeApplications
    FlexibleContexts
    DeriveAnyClass
    QuasiQuotes

  ghc-options:
    -Wall
    -- -Werror
    -optP-Wno-nonportable-include-path
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
    -Wpartial-fields
    -fhide-source-paths
    -freverse-errors

  default-language: Haskell2010


library
  import: common-options
  exposed-modules:
      Aws.Lambda
  other-modules:
      Aws.Lambda.Runtime
      Aws.Lambda.Runtime.ALB.Types
      Aws.Lambda.Runtime.API.Endpoints
      Aws.Lambda.Runtime.API.Version
      Aws.Lambda.Runtime.APIGateway.Types
      Aws.Lambda.Runtime.ApiInfo
      Aws.Lambda.Runtime.Common
      Aws.Lambda.Runtime.Configuration
      Aws.Lambda.Runtime.Context
      Aws.Lambda.Runtime.Environment
      Aws.Lambda.Runtime.Error
      Aws.Lambda.Runtime.Publish
      Aws.Lambda.Runtime.StandaloneLambda.Types
      Aws.Lambda.Setup
      Aws.Lambda.Utilities
      Paths_aws_lambda_haskell_runtime
  autogen-modules:
      Paths_aws_lambda_haskell_runtime
  hs-source-dirs:
      src
  build-depends:
      aeson
    , bytestring
    , case-insensitive
    , exceptions
    , hashable
    , http-client
    , http-types
    , mtl
    , path >0.7
    , path-io
    , safe-exceptions-checked
    , template-haskell
    , text
    , unordered-containers

test-suite aws-lambda-haskell-runtime-test
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_aws_lambda_haskell_runtime
  hs-source-dirs:
      test
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
     hspec
